syntax = "proto3";
package user;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message UserResponse {
    string name = 1;
    int32 id = 2;  // Unique ID number for this person.
    string email = 3;
  
    enum PhoneType {
      MOBILE = 0;
      HOME = 1;
      WORK = 2;
    }
  
    message PhoneNumber {
      string number = 1;
      PhoneType type = 2;
    }
  
    repeated PhoneNumber phones = 4;
  
    google.protobuf.Timestamp last_updated = 5;
}


service ServiceUser {
    rpc GetAll (google.protobuf.Empty) returns (UserResponse);
    
    rpc GetAllStream (google.protobuf.Empty) returns (stream UserResponse);
}